                     Results in less tcp packages per call
    * smart.stats: rewrote check. Please reinventorize. Error counters are now
      snapshotted during inventory.
    * smart.temp: add WATO configuration
    * if64_tplink: special new check for TP Link switches with broken SNMP output
    * windows_agent: check_mk.ini: new option "port" - specifies agent port

    Notifications:
    * notify.py: unique spoolfiles name no longer created with uuid
    * Warn user if only_services does never match 

    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 
    * FIX: able to handle equal comment_id between host and service

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Rule Editor: Now able to show infeffective rules
    * Valuespec: CascadingDropdown now able to process choice values from functions
    * cisco_qos parameters now configurable via WATO
    * Removed global option logwatch_forward_to_ec, moved this to the
      logwatch_ec ruleset. With this option the forwarding can now be enabled
      for each logfile on a host
    * Configuration of an alternativ host check command
    * Inventory: Display link symbol for ps ruleset

1.2.2:
    Core:
    * Added $HOSTURL$ and $SERVICEURL$ to notification macros which contain an
      URL to the host/service details views with /check_mk/... as base.

    Checks & Agents:
    * FIX: blade_bx_load: remove invalid WATO group


    Notifications:
    * FIX: Removing GRAPH_CODE in html mails when not available
    * Using plugin argument 1 for path to pnp4nagios index php to render graphs
    * Little speedup of check_mk --notify

    Multisite:
    * FIX: Fixed umlaut handling in reloaded snapins

    WATO: