@@ -62,6 +62,7 @@
     * smart.temp: add WATO configuration
     * if64_tplink: special new check for TP Link switches with broken SNMP output
     * windows_agent: check_mk.ini: new option "port" - specifies agent port
+    * winperf_processor: introduce averaging, support predictive levels
 
     Notifications:
     * notify.py: unique spoolfiles name no longer created with uuid
